@@ -11,8 +11,13 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import uk.gov.justice.laa.providerdata.entity.ContractManagerEntity;
 import uk.gov.justice.laa.providerdata.entity.OfficeContractManagerLinkEntity;
+import uk.gov.justice.laa.providerdata.entity.OfficeEntity;
+import uk.gov.justice.laa.providerdata.entity.ProviderEntity;
+import uk.gov.justice.laa.providerdata.entity.ProviderOfficeLinkEntity;
 import uk.gov.justice.laa.providerdata.mapper.ContractManagerMapper;
 import uk.gov.justice.laa.providerdata.model.OfficeContractManagerV2;
 import uk.gov.justice.laa.providerdata.repository.OfficeContractManagerLinkRepository;
@@ -30,6 +35,10 @@ class ContractManagerServiceTest {
 
   @Mock private ContractManagerMapper mapper;
 
+  @Mock private ProviderService providerService;
+
+  @Mock private OfficeService officeService;
+
   @InjectMocks private ContractManagerService service;
 
   private UUID officeGuid;
@@ -37,6 +46,8 @@ class ContractManagerServiceTest {
   private ContractManagerEntity entity;
   private OfficeContractManagerLinkEntity link;
   private OfficeContractManagerV2 dto;
+  private ProviderEntity provider;
+  private ProviderOfficeLinkEntity providerOfficeLink;
 
   @BeforeEach
   void setUp() {
@@ -49,6 +60,15 @@ class ContractManagerServiceTest {
             .contractManagerId("CM123")
             .firstName("John")
             .lastName("Smith")
+            .build();
+
+    provider = ProviderEntity.builder().guid(providerGuid).firmNumber("FRM001").build();
+    OfficeEntity office = OfficeEntity.builder().guid(officeGuid).build();
+    providerOfficeLink =
+        ProviderOfficeLinkEntity.builder()
+            .guid(UUID.randomUUID())
+            .provider(provider)
+            .office(office)
             .build();
 
     link = OfficeContractManagerLinkEntity.builder().contractManager(entity).build();
@@ -67,18 +87,26 @@ class ContractManagerServiceTest {
    */
   @Test
   void shouldReturnContractManagersForOffice() {
+    String providerGuidValue = providerGuid.toString();
+    String providerOfficeLinkGuidValue = providerOfficeLink.getGuid().toString();
 
-    when(linkRepository.findByOffice_Guid(officeGuid)).thenReturn(List.of(link));
+    when(providerService.getProvider(providerGuidValue)).thenReturn(provider);
+    when(officeService.getOfficeLink(provider, providerOfficeLinkGuidValue))
+        .thenReturn(providerOfficeLink);
+    var pageable = PageRequest.of(0, 100);
+
+    when(linkRepository.findByOffice_Guid(officeGuid, pageable))
+        .thenReturn(new PageImpl<>(List.of(link), pageable, 1));
 
     when(mapper.toOfficeContractManagerV2(entity)).thenReturn(dto);
 
-    List<OfficeContractManagerV2> result =
-        service.getContractManagers(officeGuid.toString(), providerGuid.toString());
+    var result =
+        service.getContractManagers(providerGuidValue, providerOfficeLinkGuidValue, pageable);
 
-    assertThat(result).hasSize(1);
-    assertThat(result.get(0).getContractManagerId()).isEqualTo("CM123");
-    assertThat(result.get(0).getFirstName()).isEqualTo("John");
-    assertThat(result.get(0).getLastName()).isEqualTo("Smith");
+    assertThat(result.getContent()).hasSize(1);
+    assertThat(result.getContent().getFirst().getContractManagerId()).isEqualTo("CM123");
+    assertThat(result.getContent().getFirst().getFirstName()).isEqualTo("John");
+    assertThat(result.getContent().getFirst().getLastName()).isEqualTo("Smith");
   }
 
   /**
@@ -86,12 +114,15 @@ class ContractManagerServiceTest {
    */
   @Test
   void shouldReturnEmptyListWhenNoContractManagersExist() {
+    when(providerService.getProvider("FRM001")).thenReturn(provider);
+    when(officeService.getOfficeLink(provider, "ACC001")).thenReturn(providerOfficeLink);
+    var pageable = PageRequest.of(0, 100);
 
-    when(linkRepository.findByOffice_Guid(officeGuid)).thenReturn(List.of());
+    when(linkRepository.findByOffice_Guid(officeGuid, pageable))
+        .thenReturn(new PageImpl<>(List.of(), pageable, 0));
 
-    List<OfficeContractManagerV2> result =
-        service.getContractManagers(officeGuid.toString(), providerGuid.toString());
+    var result = service.getContractManagers("FRM001", "ACC001", pageable);
 
-    assertThat(result).isEmpty();
+    assertThat(result.getContent()).isEmpty();
   }
 }
